# lidar3D

./: README.md
electronics/: LIDAR3D-pinout.docx
mechanics/: Mechanizm lidara 3D.stp
ri_sensor_scanner_3d/: CMakeLists.txt  README  install.sh  package.xml
ri_sensor_scanner_3d/cfg/: scanner_3d.cfg
ri_sensor_scanner_3d/include/ri_sensor_scanner_3d/: laserscanner3d.h  scanner_3d.h
ri_sensor_scanner_3d/launch/: start.launch
ri_sensor_scanner_3d/src/: fake_lidar_pose_publisher.cpp  laserscanner3d.cpp  scanner_3d.cpp
uc_controlelr_lib/: README
uc_controlelr_lib/rosov_lidar3d/: exti.c  exti.h  main.c  main.h  printf_config.c  printf_config.h  rosov_lidar3d.mk
uc_controlelr_lib/rosov_lidar3d/power/: power.c  power.h  power_adc.c  power_adc.h  power_led.c  power_led.h
uc_controlelr_lib/rosov_lidar3d/rosov/: bumper.c  bumper.h  comm.c  comm.h
